--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,17 +6,17 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     # -   id: double-quote-string-fixer
-# -   repo: https://github.com/psf/black
-#     rev: 22.10.0
-#     hooks:
-#     -   id: black
-# -   repo: https://github.com/PyCQA/flake8
-#     rev: 7.0.0
-#     hooks:
-#     -   id: flake8
-# -   repo: https://github.com/asottile/reorder-python-imports
-#     rev: v3.12.0
-#     hooks:
-#     -   id: reorder-python-imports
-#         exclude: ^(pre_commit/resources/|testing/resources/python3_hooks_repo/)
-#         args: [--py39-plus]
+-   repo: https://github.com/psf/black
+    rev: 22.10.0
+    hooks:
+    -   id: black
+-   repo: https://github.com/PyCQA/flake8
+    rev: 7.0.0
+    hooks:
+    -   id: flake8
+-   repo: https://github.com/asottile/reorder-python-imports
+    rev: v3.12.0
+    hooks:
+    -   id: reorder-python-imports
+        exclude: ^(pre_commit/resources/|testing/resources/python3_hooks_repo/)
+        args: [--py39-plus]
