--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,10 +10,10 @@ repos:
     rev: 22.10.0
     hooks:
     -   id: black
--   repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-    -   id: flake8
+# -   repo: https://github.com/PyCQA/flake8
+#     rev: 7.0.0
+#     hooks:
+#     -   id: flake8
 -   repo: https://github.com/asottile/reorder-python-imports
     rev: v3.12.0
     hooks:
